--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
+title: Data Science | Resource
+email: ziaulhaq@mhs.dinus.ac.id
+description: > # baru belajar data science, sedikit menulis disini, berbagi kalau memang bisa dibaca ya, hehehe
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/datascience"
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: zhq41
+github_username:  zhq41
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
+pygments: true
